// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomRoutes tests should match login routes 1`] = `
<div>
  <div
    class="mantine-yv0or0"
  >
    <h2>
      Solicitud de cita veterinaria
    </h2>
    <p>
      Diligencia todos los campos para asignar la cita
    </p>
    <div
      class="mantine-1ne3752"
    />
    <form>
      <div>
        <div
          class="mantine-TextInput-root mantine-1m3pqry"
        >
          <label
            class="mantine-1w07r5r mantine-TextInput-label"
            for="mantine-1rjpd3wll"
            id="mantine-1rjpd3wll-label"
          >
            Nombre del dueño
            <span
              aria-hidden="true"
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-g773hu"
              data-testid="Nombre del dueño"
              id="mantine-1rjpd3wll"
              placeholder="Ingrese el nombre del dueño"
              required=""
              type="text"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="mantine-TextInput-root mantine-1m3pqry"
        >
          <label
            class="mantine-1w07r5r mantine-TextInput-label"
            for="mantine-x9wwk06vp"
            id="mantine-x9wwk06vp-label"
          >
            Documento del dueño
            <span
              aria-hidden="true"
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-g773hu"
              data-testid="Documento del dueño"
              id="mantine-x9wwk06vp"
              placeholder="Ingrese el documento del dueño"
              required=""
              type="text"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="mantine-TextInput-root mantine-1m3pqry"
        >
          <label
            class="mantine-1w07r5r mantine-TextInput-label"
            for="mantine-zhuavo7gr"
            id="mantine-zhuavo7gr-label"
          >
            Nombre de la mascota
            <span
              aria-hidden="true"
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-g773hu"
              data-testid="Nombre de la mascota"
              id="mantine-zhuavo7gr"
              placeholder="Ingrese el nombre de la mascota"
              required=""
              type="text"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="mantine-TextInput-root mantine-1m3pqry"
        >
          <label
            class="mantine-1w07r5r mantine-TextInput-label"
            for="mantine-fh4tvlxie"
            id="mantine-fh4tvlxie-label"
          >
            Edad de la mascota
            <span
              aria-hidden="true"
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-g773hu"
              data-testid="Edad de la mascota"
              id="mantine-fh4tvlxie"
              placeholder="Ingrese la edad de la mascota"
              required=""
              type="text"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="mantine-TextInput-root mantine-1m3pqry"
        >
          <label
            class="mantine-1w07r5r mantine-TextInput-label"
            for="mantine-gqqomfnq5"
            id="mantine-gqqomfnq5-label"
          >
            Fecha de la cita
            <span
              aria-hidden="true"
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-g773hu"
              data-testid="Fecha de la cita"
              id="mantine-gqqomfnq5"
              placeholder="Seleccione la fecha de la cita"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </form>
    <div
      class="mantine-1ne3752"
    />
    <button
      class="mantine-Button-filled mantine-Button-root mantine-1grzg0q"
      data-testid="register-btn"
      type="button"
    >
      <div
        class="mantine-3xbgk5 mantine-Button-inner"
      >
        <span
          class="mantine-qo1k2 mantine-Button-label"
        >
          Registrar
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`CustomRoutes tests should match snapshot CustomRoutes 1`] = `
<div>
  <div
    class="mantine-yv0or0"
  >
    <h2>
      Solicitud de cita veterinaria
    </h2>
    <p>
      Diligencia todos los campos para asignar la cita
    </p>
    <div
      class="mantine-1ne3752"
    />
    <form>
      <div>
        <div
          class="mantine-TextInput-root mantine-1m3pqry"
        >
          <label
            class="mantine-1w07r5r mantine-TextInput-label"
            for="mantine-vgwqn3b24"
            id="mantine-vgwqn3b24-label"
          >
            Nombre del dueño
            <span
              aria-hidden="true"
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-g773hu"
              data-testid="Nombre del dueño"
              id="mantine-vgwqn3b24"
              placeholder="Ingrese el nombre del dueño"
              required=""
              type="text"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="mantine-TextInput-root mantine-1m3pqry"
        >
          <label
            class="mantine-1w07r5r mantine-TextInput-label"
            for="mantine-nur8176dd"
            id="mantine-nur8176dd-label"
          >
            Documento del dueño
            <span
              aria-hidden="true"
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-g773hu"
              data-testid="Documento del dueño"
              id="mantine-nur8176dd"
              placeholder="Ingrese el documento del dueño"
              required=""
              type="text"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="mantine-TextInput-root mantine-1m3pqry"
        >
          <label
            class="mantine-1w07r5r mantine-TextInput-label"
            for="mantine-c0r9ln56k"
            id="mantine-c0r9ln56k-label"
          >
            Nombre de la mascota
            <span
              aria-hidden="true"
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-g773hu"
              data-testid="Nombre de la mascota"
              id="mantine-c0r9ln56k"
              placeholder="Ingrese el nombre de la mascota"
              required=""
              type="text"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="mantine-TextInput-root mantine-1m3pqry"
        >
          <label
            class="mantine-1w07r5r mantine-TextInput-label"
            for="mantine-65qp3du7u"
            id="mantine-65qp3du7u-label"
          >
            Edad de la mascota
            <span
              aria-hidden="true"
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-g773hu"
              data-testid="Edad de la mascota"
              id="mantine-65qp3du7u"
              placeholder="Ingrese la edad de la mascota"
              required=""
              type="text"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="mantine-TextInput-root mantine-1m3pqry"
        >
          <label
            class="mantine-1w07r5r mantine-TextInput-label"
            for="mantine-a1qwf61ss"
            id="mantine-a1qwf61ss-label"
          >
            Fecha de la cita
            <span
              aria-hidden="true"
              class="mantine-1m203yh mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-TextInput-defaultVariant mantine-TextInput-input mantine-g773hu"
              data-testid="Fecha de la cita"
              id="mantine-a1qwf61ss"
              placeholder="Seleccione la fecha de la cita"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </form>
    <div
      class="mantine-1ne3752"
    />
    <button
      class="mantine-Button-filled mantine-Button-root mantine-1grzg0q"
      data-testid="register-btn"
      type="button"
    >
      <div
        class="mantine-3xbgk5 mantine-Button-inner"
      >
        <span
          class="mantine-qo1k2 mantine-Button-label"
        >
          Registrar
        </span>
      </div>
    </button>
  </div>
</div>
`;
